# AIPet

./: .gitignore  README.md
.github/workflows/: release.yml
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/bundled-pets/hoops/: pet-atlas.json  pet.json
app/src-tauri/bundled-pets/purple-slime/: pet-atlas.json  pet.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/: commands.toml
app/src-tauri/src/: ai_api_client.rs  ai_config.rs  config_manager.rs  image_processor.rs  lib.rs  main.rs  pet_creator.rs  prompt_builder.rs  system_monitor.rs  tray.rs  window_detector.rs
app/src/components/: PetCanvas.tsx
app/src/constants/: codex.ts
app/src/types/: aipet.ts
app/src/utils/: triggerResolver.ts
app/src/windows/: AppSettingsSection.tsx  PetCreatorPanel.tsx  PetLibrarySection.tsx  PetStatusPanel.tsx  Settings.tsx  StateConfigSection.tsx
app/~/.tauri/: aipet.key  aipet.key.pub
docs/: v0.1.0-init.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
templates/dva-pet/: imagegen-jobs.json  pet_request.json
templates/dva-pet/prompts/: base-pet.md
templates/dva-pet/prompts/row-retries/: failed.md  idle.md  jumping.md  review.md  running-left.md  running-right.md  running.md  waiting.md  waving.md
templates/dva-pet/prompts/rows/: failed.md  idle.md  jumping.md  review.md  running-left.md  running-right.md  running.md  waiting.md  waving.md
templates/petdex/nezuko/: pet.json
