[package]
name = "aipet"
version = "0.4.0"
edition = "2021"

[lib]
name = "aipet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
tokio-util = "0.7"
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = "0.25"
webp = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
